# bluez

./: Makefile.tools  PKbuild.sh  bluez_qtcreator.files  qtc-bluez-git.files  qtc-bluez-git.includes
attrib/: gatttool.c
src/: main.c
tools/: CMakeLists.txt  common.cmake  find_eos_protobuf.cmake  find_eos_qt5.cmake  hcitool.c  pk-btgatt-commandz.c  pk-btgatt-commandz.h  pk-btgatt-hack.c  pk-btgatt-rwcfg.c  pk-btgatt-rwcfg.h  pk-btgatt-tcpip.c  pk-btgatt-tcpip.h  run-pk-btgatt-hack.sh
